--- a/Resources/Styles/Layout/titles.less
+++ b/Resources/Styles/Layout/titles.less
@@ -1,6 +1,10 @@
 .page[data-layout="standard"] {
 	.title {
-		h2 { font-size: 2cm; color: white; padding: 0.25em; background: black; text-align: center; font-weight: bold; border-radius: 0.25em;}
+		z-index: 10;
+		h2 { font-size: 2cm; color: white; padding: 0.25em; background: black; 
+			text-align: center; font-weight: bold; border-radius: 0.25em;
+			min-height: 1.5em;
+		}
 
 		&.normal h2 { font-size: 1cm; }
 		&.small h2 { font-size: 0.5cm; }
