--- a/Resources/Styles/controls.less
+++ b/Resources/Styles/controls.less
@@ -12,6 +12,8 @@
 	border-bottom: 1px solid rgb(100,100,100);
 
 	* { color: white; }
+	
+	input[type=text] { color: black; }
 }
 
 .welcomeControls {
@@ -84,14 +86,14 @@
 }
 
 .titleControls {
-	display: flex; flex-direction: row; justify-content: space-around; min-width: 14cm;
-	box-shadow: 0 0 0.5cm black; border-radius: 0.1cm; align-items: center;
+	display: flex; flex-direction: row; justify-content: space-around; width: 14cm;
+	box-shadow: 0 0 0.5cm black; border-radius: 0.1cm; align-items: center; margin-top: 0.25cm;
 
-	/*&:before {
+	&:before {
 		 width: 0; heigth: 0; border-style: solid; border-width: 0.25cm;
 		 border-color: transparent transparent white transparent; content: ""; display: block;
-		 position: relative; top: -1cm;
-	 }*/
+		 position: relative; top: -0.9cm;
+	}
 
 	> .control {
 		> * { max-width: 2cm; }
