Feature: Page groupes for better performance

--- a/Resources/Styles/controls.less
+++ b/Resources/Styles/controls.less
@@ -33,6 +33,15 @@
 	}
 }
 
+.pageGroupControls {
+	background: rgb(100,100,100); padding: 0.5rem; color: white;
+	margin-bottom: 0.1rem; width: 100%;
+	display: flex; flex-flow: column; align-items: center;
+	
+	&:hover { cursor: pointer; }
+	span { color: white; }
+}
+
 .pageContentControls {
 	position: absolute; box-shadow: 0 0 0.5cm black; border-radius: 0.1cm; width: 27.7cm;
 
