--- a/Resources/Styles/app.less
+++ b/Resources/Styles/app.less
@@ -27,6 +27,8 @@ figcaption:before { content: "✎"; color: white; margin-right: 0.25cm; font-wei
 	display: flex;
 	justify-content: space-around;
 	width: 100%;
+	flex-direction: column;
+	align-items: center;
 }
 
 
