Feature: Implement custom positioning of image slices

--- a/Resources/Styles/controls.less
+++ b/Resources/Styles/controls.less
@@ -30,6 +30,11 @@
 		* { width: 1cm;
 			.label { display: none; }
 		}
+
+		&.range { width: 3cm;
+			input, button { width: 3cm; }
+			label { display: none; }
+		}
 	}
 }
 
