Add sidebar, refactor model to etablish a current element

--- a/Resources/Styles/controls.less
+++ b/Resources/Styles/controls.less
@@ -16,6 +16,10 @@
 	input[type=text] { color: black; }
 }
 
+.sidebar {
+	background: silver;
+}
+
 .welcomeControls {
 	opacity: 1; background: none; padding: 2cm;
 	display: flex; justify-content: space-around;
