--- a/Resources/Styles/crossBrowser.less
+++ b/Resources/Styles/crossBrowser.less
@@ -1,4 +1,4 @@
-.box-sizing (@sizing: border-box) {
+.box-sizing(@sizing: border-box) {
 	-khtml-box-sizing: @sizing;
 	-moz-box-sizing: @sizing;
 	-ms-box-sizing: @sizing;
@@ -26,19 +26,20 @@
 }
 
 .flex {
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: flex;
+	display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+	display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+	display: -ms-flexbox;      /* TWEENER - IE 10 */
+	display: -webkit-flex;     /* NEW - Chrome */
+	display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
 }
-.flex-flow (@flexFlow:column) {
+.flex-flow(@flexFlow:column) {
 	-moz-flex-flow: @flexFlow;
 	-ms-flex-flow: @flexFlow;
 	-webkit-flex-flow: @flexFlow;
 	flex-direction: @flexFlow;
 	flex-flow: @flexFlow;
 }
-.justify-content (@justify: space-between) {
+.justify-content(@justify: space-between) {
 	-khtml-justify-content: @justify;
 	-moz-justify-content: @justify;
 	-ms-justify-content: @justify;
@@ -46,7 +47,7 @@
 	-webkit-justify-content: @justify;
 	justify-content: @justify;
 }
-.align-items (@align: center) {
+.align-items(@align: center) {
 	-khtml-align-items: @align;
 	-moz-align-items: @align;
 	-ms-align-items: @align;
@@ -54,11 +55,41 @@
 	-webkit-align-items: @align;
 	align-items: @align;
 }
-.align-content (@align: stretch) {
+.align-content(@align: stretch) {
 	-khtml-align-items: @align;
 	-moz-align-items: @align;
 	-ms-align-items: @align;
 	-o-align-items: @align;
 	-webkit-align-items: @align;
 	align-items: @align;
+}
+.column-count(@count) {
+	-webkit-column-count: @count;
+	-moz-column-count: @count;
+	-ms-column-count: @count;
+	column-count: @count;
+}
+.column-gap(@gap) {
+	-webkit-column-gap: @gap;
+	-moz-column-gap: @gap;
+	-ms-column-gap: @gap;
+	column-gap: @gap;
+}
+.flex-grow(@growing) {
+	-webkit-flex-grow: @growing;
+	-moz-flex-grow: @growing;
+	-ms-flex-grow: @growing;
+	flex-grow: @growing;
+}
+.align-self(@alignment) {
+	-webkit-align-self: @alignment;
+	-moz-align-self: @alignment;
+	-ms-align-self: @alignment;
+	align-self: @alignment;
+}
+.flex-wrap(@wrap) {
+	-webkit-flex-wrap: @wrap;
+	-moz-flex-wrap: @wrap;
+	-ms-flex-wrap: @wrap;
+	flex-wrap: @wrap;
 }
