--- a/Resources/Styles/app.less
+++ b/Resources/Styles/app.less
@@ -2,10 +2,20 @@
 @elementMargin: 0.5em;
 
 * {
-	.box-sizing(border-box);
+	.box-sizing(border-box); margin: 0; padding: 0; text-indent: 0; color: black;
+	font: Ubuntu, Arial, Helvetica, sans-serif;
 }
-
+html, body { height: 100%; overflow: hidden; }
 body { padding-top: 2cm; font-family: Ubuntu, Arial, Helvetica, sans-serif; }
+
+.view { height: 100%; overflow: hidden; }
+
+.applicationFrame {
+	.flex; .flex-flow(row); height: 100%; overflow: hidden;
+
+	.sidebar { width: 20%; }
+	.main { width: 100%; height: 100%; overflow-y: auto; overflow-x: hidden; }
+}
 
 /* templates */
 .listElement {
