--- a/Resources/Styles/form.less
+++ b/Resources/Styles/form.less
@@ -19,5 +19,5 @@ span.inputFileWrapper {
 }
 
 textarea.dragArea {
-	width: 4cm; border: 2px dashed gray; background: white; padding: 0.1cm; text-align: center; height: 2.35em;
+	border: 2px dashed gray; background: white; padding: 0.1cm; text-align: center; height: 2cm;
 }
