--- a/Resources/Styles/pages.less
+++ b/Resources/Styles/pages.less
@@ -1,12 +1,15 @@
 .page {
 	background: white; box-shadow: 0 0 0.5cm gray; width: 29.7cm; height: 21cm; padding: 1cm; margin: 0.5cm;
 	margin-bottom: 2.5cm; overflow: hidden;
+	position: relative;
 
 	> .content { width: 100%; height: 100%; background: rgb(245, 245, 245);
 		display: flex; flex-direction: row; flex-wrap: wrap; justify-content: space-between;
 		align-content: space-between;
 		overflow: hidden;
 	}
+
+	&[data-ng-current="true"] { outline: 0.1cm solid cornflowerblue; }
 }
 
 .content .imageContainer { display: inline-flex; background-position: center center;
