--- a/Resources/Views/imageView.html
+++ b/Resources/Views/imageView.html
@@ -18,7 +18,63 @@
 	</div>
 	<div class="applicationFrame">
 		<div class="controls sidebar">
-			<h3>Tools</h3>
+			<div class="pageContentControls" data-ng-if="getTypeName(currentElement) == 'Page' ">
+				<div class="controlsSection" data-size="medium">
+					<h3><span class="icon icon-liga">&#xe048;</span>Page</h3>
+					<div class="controlsSectionContent buttonGrid" data-columns="2">
+						<div class="control" data-size="single">
+							<button class="button" data-ng-click="photoBook.createPageAfter(currentElement,2)" title="Insert new page after">
+								<span class="icon icon-liga">&#xe108;</span><span class="caption">Add after</span>
+							</button>
+						</div>
+						<div class="control" data-size="single">
+							<button class="button" data-ng-click="photoBook.movePage(currentElement,-1)" title="Move page one position upwards">
+								<span class="icon icon-liga">&#xe00e;</span><span class="caption">Move up</span>
+							</button>
+						</div>
+						<div class="control" data-size="single">
+							<button class="button" data-ng-click="photoBook.movePage(currentElement, 1)" title="Move page one position downwards">
+								<span class="icon icon-liga">&#xe00b;</span><span class="caption">Move down</span>
+							</button>
+						</div>
+						<div class="control" data-size="single">
+							<button class="button" data-ng-click="photoBook.removePage(currentElement)" title="Remove page">
+								<span class="icon icon-liga">&#xe12c;</span><span class="caption">Delete page</span>
+							</button>
+						</div>
+
+						<div class="control" data-size="double" data-columns="2">
+							<label>Sections (rows)</label>
+							<select data-ng-model="currentElement.properties['sections']" ng-options="l for l in layouts[currentElement.properties['layout']].sections"
+									title="Number of sections per page"></select>
+						</div>
+						<div class="control" data-size="double" data-columns="2">
+							<label>Page layout</label>
+							<select data-ng-model="currentElement.properties['layout']" ng-options="value for (key,value) in availableLayouts"
+									title="Page layout">
+							</select>
+						</div>
+					</div>
+				</div>
+				<div class="controlsSection" data-size="small">
+					<h3><span class="icon icon-liga">&#xe030;</span> Insert</h3>
+					<div class="controlsSectionContent buttonGrid" data-columns="2">
+						<div class="control" data-size="single">
+							<button class="button" data-ng-click="currentElement.createTitle()" title="Create a new title">
+								<span class="icon icon-liga">&#xe034;</span><span class="caption">&nbsp;Title</span>
+							</button>
+						</div>
+						<div class="control" data-size="single">
+							<button class="button" data-ng-click="currentElement.createImage()" title="Add new image to page">
+								<span class="icon icon-liga">&#xe074;</span><span class="caption">&nbsp;Image</span>
+							</button>
+						</div>
+						<div class="control" data-size="double">
+							<textarea class="dragArea" placeholder="drag images here" data-ng-input="true" data-callback="currentElement.addImagePaths(value)"></textarea>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 		<div class="main">
 
@@ -31,17 +87,19 @@
 
 			<div class="pageFrame" data-ng-repeat="page in photoBook.pages">
 				<div class="controls pageGroupControls" data-ng-if="$index % pagesPerGroup == 0">
-			<span data-ng-if="$index == visiblePagesStart" data-ng-click="setVisiblePages(-pagesPerGroup)">
-				{{$index+1}} - {{min($index+pagesPerGroup, photoBook.pages.length)}} of {{photoBook.pages.length}} &#9650;
-			</span>
-			<span data-ng-if="$index != visiblePagesStart" data-ng-click="setVisiblePages($index)">
-				{{$index+1}} - {{min($index+pagesPerGroup, photoBook.pages.length)}} of {{photoBook.pages.length}} &#9660;
-			</span>
+					<span data-ng-if="$index == visiblePagesStart" data-ng-click="setVisiblePages(-pagesPerGroup)">
+						{{$index+1}} - {{min($index+pagesPerGroup, photoBook.pages.length)}} of {{photoBook.pages.length}} &#9650;
+					</span>
+					<span data-ng-if="$index != visiblePagesStart" data-ng-click="setVisiblePages($index)">
+						{{$index+1}} - {{min($index+pagesPerGroup, photoBook.pages.length)}} of {{photoBook.pages.length}} &#9660;
+					</span>
 				</div>
-				<div class="page" data-layout="{{page.properties['layout']}}" data-ng-if="$index >= visiblePagesStart && $index < visiblePagesStart+pagesPerGroup">
+				<div class="page" data-layout="{{page.properties['layout']}}"
+					data-ng-if="$index >= visiblePagesStart && $index < visiblePagesStart+pagesPerGroup"
+					data-ng-click="setCurrentElement(page); $event.stopPropagation();" data-ng-current="{{currentElement == page && 'true' || 'false'}}">
 					<div class="titles" >
 						<div data-ng-repeat="title in page.titles" class="title {{title.properties['type']}} {{title.properties['size']}}"
-							 style="top: {{title.properties['top']}}cm; left: {{title.properties['left']}}cm; width: {{title.properties['width']}}cm;">
+							 style="top: {{title.properties['top']}}cm; left: {{title.properties['left']}}cm; width: {{title.properties['width']}}cm;" data-ng-click="setCurrentElement(title); $event.stopPropagation();">
 							<h2 contenteditable="true" data-ng-model="title.value" >{{title.value}}</h2>
 							<div class="controls titleControls">
 								<div class="control">
@@ -85,7 +143,7 @@
 								data-position="{{image.properties['position']}}" data-vertical-style="{{image.properties['verticalStyle']}}"
 								class="imageContainer" style="background-image: url('{{image.path}}');
 							{{image.properties['position'] == 'custom' &&
-							'background-position: '+ (image.properties['offsetLeft'] || 0) + 'cm '+ (image.properties['offsetTop'] || 0)+'cm;' || '' }}">
+							'background-position: '+ (image.properties['offsetLeft'] || 0) + 'cm '+ (image.properties['offsetTop'] || 0)+'cm;' || '' }}" data-ng-click="setCurrentElement(image); $event.stopPropagation();">
 
 							<div class="controls imageControls">
 								<div class="control">
@@ -139,61 +197,7 @@
 						</figure>
 					</div>
 
-					<div class="controls pageContentControls">
-						<div class="controlsBox" data-size="medium">
-							<h3><span class="icon icon-liga">&#xe048;</span>Page</h3>
-							<div class="controlsBoxContent">
-								<div class="control" data-size="single">
-									<button class="button" data-ng-click="photoBook.createPage(2,$index+1)" title="Insert new page after">
-										<span class="icon icon-liga">&#xe108;</span><span class="caption">Add after</span>
-									</button>
-								</div>
-								<div class="control" data-size="single">
-									<button class="button" data-ng-click="photoBook.movePage(page,-1)" title="Move page one position upwards">
-										<span class="icon icon-liga">&#xe00e;</span><span class="caption">Move up</span>
-									</button>
-								</div>
-								<div class="control" data-size="single">
-									<button class="button" data-ng-click="photoBook.movePage(page, 1)" title="Move page one position downwards">
-										<span class="icon icon-liga">&#xe00b;</span><span class="caption">Move down</span>
-									</button>
-								</div>
-								<div class="control" data-size="single">
-									<button class="button" data-ng-click="photoBook.removePage(page)" title="Remove page">
-										<span class="icon icon-liga">&#xe12c;</span><span class="caption">Delete</span>
-									</button>
-								</div>
 
-								<div class="control" data-size="single">
-									<select data-ng-model="page.properties['sections']" ng-options="l for l in layouts[page.properties['layout']].sections"
-											title="Number of sections per page"></select>
-								</div>
-								<div class="control" data-size="tribble">
-									<select data-ng-model="page.properties['layout']" ng-options="value for (key,value) in availableLayouts"
-											title="Page layout">
-									</select>
-								</div>
-							</div>
-						</div>
-						<div class="controlsBox" data-size="small">
-							<h3><span class="icon icon-liga">&#xe030;</span> Insert</h3>
-							<div class="controlsBoxContent">
-								<div class="control" data-size="double">
-									<button class="button" data-ng-click="page.createTitle()" title="Create a new title">
-										<span class="icon icon-liga">&#xe034;</span><span class="caption">&nbsp;Title</span>
-									</button>
-								</div>
-								<div class="control" data-size="double">
-									<button class="button" data-ng-click="page.createImage()" title="Add new image to page">
-										<span class="icon icon-liga">&#xe074;</span><span class="caption">&nbsp;Image</span>
-									</button>
-								</div>
-								<div class="control" data-size="quad">
-									<textarea class="dragArea" placeholder="drag images here" data-ng-input="true" data-callback="page.addImagePaths(value)"></textarea>
-								</div>
-							</div>
-						</div>
-					</div>
 
 				</div>
 			</div>
