--- a/Webapp/Resources/Styles/controls.less
+++ b/Webapp/Resources/Styles/controls.less
@@ -12,8 +12,9 @@
 	border-bottom: 1px solid rgb(100,100,100);
 
 	* { color: white; }
-	
+
 	input[type=text] { color: black; }
+	select, option { color: black; }
 }
 
 .sidebar.controls {
@@ -85,7 +86,7 @@
 	background: rgb(100,100,100); padding: 0.5rem; color: white;
 	margin-bottom: 0.1rem; width: 100%;
 	display: flex; flex-flow: column; align-items: center;
-	
+
 	&:hover { cursor: pointer; }
 	span { color: white; }
 }
