--- a/Webapp/Resources/Styles/pages.less
+++ b/Webapp/Resources/Styles/pages.less
@@ -31,7 +31,7 @@ figure.imageContainer {
 }
 
 @media print {
-	body { padding: 0; background: white; }
+	body { padding: 0; background: white; height: auto; overflow: auto; }	
 	.controls { display: none!important; }
 	.page { padding: 0; width: 27.7cm; height: 19cm;  margin: 0; box-shadow: none; }
 	.page > .content { background: none; }
