--- a/Webapp/Resources/Styles/controls.less
+++ b/Webapp/Resources/Styles/controls.less
@@ -75,18 +75,7 @@
 }
 
 .titleControls {
-	display: flex; flex-direction: row; justify-content: space-around; width: 14cm;
-	box-shadow: 0 0 0.5cm black; border-radius: 0.1cm; align-items: center; margin-top: 0.25cm;
-
-	&:before {
-		 width: 0; heigth: 0; border-style: solid; border-width: 0.25cm;
-		 border-color: transparent transparent white transparent; content: ""; display: block;
-		 position: relative; top: -0.9cm;
-	}
-
-	> .control {
-		> * { max-width: 2cm; }
-		> span[data-dragpoint] { cursor: move; font-size: 1.1em; width: 1cm; }
-		> input[type="number"] { width: 1cm; }
-	}
+	position: absolute; left: -1rem; top: -1rem; cursor: move;
+	border-radius: 1rem; width: 2rem; height: 2rem;
+	display: flex; justify-content: center;	align-content: center; align-items: center;
 }
