--- a/Webapp/Resources/Styles/pages.less
+++ b/Webapp/Resources/Styles/pages.less
@@ -16,6 +16,8 @@
 	-webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;
 }
 
+.title[data-ng-current="true"] { border: 0.1cm solid cornflowerblue; }
+
 
 figure.imageContainer {
 	display: flex; flex-direction: column; justify-content: flex-end;
