--- a/Webapp/Resources/Views/imageView.html
+++ b/Webapp/Resources/Views/imageView.html
@@ -70,17 +70,17 @@
 					<h3><span class="icon icon-liga">&#xe030;</span> Insert</h3>
 					<div class="controlsSectionContent buttonGrid" data-columns="2">
 						<div class="control" data-size="single">
-							<button class="button" data-ng-click="currentElement.createTitle()" title="Create a new title">
+							<button class="button" data-ng-click="currentElement.createTitle(); setCurrentElement(currentPage.titles[currentPage.titles.length-1], currentPage);" title="Create a new title">
 								<span class="icon icon-liga">&#xe034;</span><span class="caption">&nbsp;Title</span>
 							</button>
 						</div>
 						<div class="control" data-size="single">
-							<button class="button" data-ng-click="currentElement.createImage()" title="Add new image to page">
+							<button class="button" data-ng-click="currentElement.createImage(); setCurrentElement(currentPage.images[currentPage.images.length-1], currentPage);" title="Add new image to page">
 								<span class="icon icon-liga">&#xe074;</span><span class="caption">&nbsp;Image</span>
 							</button>
 						</div>
 						<div class="control" data-size="double">
-							<textarea class="dragArea" placeholder="drag images here" data-ng-input="true" data-callback="currentElement.addImagePaths(value)"></textarea>
+							<textarea class="dragArea" placeholder="drag images here" data-ng-input="true" data-callback="currentElement.addImagePaths(value); setCurrentElement(currentPage.images[currentPage.images.length-1], currentPage);"></textarea>
 						</div>
 					</div>
 				</div>
@@ -186,7 +186,7 @@
 
 			<div class="controls welcomeControls" data-ng-if="photoBook.pages.length == 0">
 				<div class="control">
-					<button class="button" data-ng-click="photoBook.createPage(2,photoBook.pages.length)" title="Create new page">
+					<button class="button" data-ng-click="photoBook.createPage(2,photoBook.pages.length); setCurrentElement(photoBook.pages[0], photoBook.pages[0]);" title="Create new page">
 						<span class="icon icon-liga">&#xe108;</span> New page</button>
 				</div>
 			</div>
